refactor: implement the cmd server && proxy
